--- a/Pita_ChatBot/requirements.txt
+++ b/Pita_ChatBot/requirements.txt
@@ -11,7 +11,7 @@ pip==18.1
 pymongo==3.7.2
 python-dateutil==2.7.5
 python-twitter==3.4.2
-PyYAML==3.13
+pyyaml>=4.2b1
 requests==2.20.0
 requests-oauthlib==1.0.0
 setuptools==40.5.0
